istiofiles/lab6/virtual-service-recommendation-503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 90
    route:
    - destination:
        host: recommendation
        subset: version-v1
  - route:
    - destination:
        host: recommendation
        subset: version-v1
---
